force-app/main/default/objects/Colaboracion__c/Colaboracion__c.object-meta.xml
<CustomObject>
    <label>Colaboración</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Nombre de Colaboración</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Colaboraciones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>