force-app/main/default/objects/Colaboracion__c/fields/Fecha_desde__c.field-meta.xml
<CustomField>
    <fullName>Fecha_desde__c</fullName>
    <label>Fecha desde</label>
    <type>Date</type>
</CustomField>