force-app/main/default/objects/Colaboracion__c/fields/Fecha_hasta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_hasta__c</fullName>
    <label>Fecha hasta</label>
    <type>Date</type>
</CustomField>