force-app/main/default/objects/Colaboracion__c/fields/Institucion_principal_del_profesional__c.field-meta.xml
<CustomField>
    <fullName>Institucion_principal_del_profesional__c</fullName>
    <formula>Profesional__r.Institucion_principal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Institución principal del profesional</label>
    <type>Text</type>
</CustomField>