force-app/main/default/objects/Colaboracion__c/fields/Lugar__c.field-meta.xml
<CustomField>
    <fullName>Lugar__c</fullName>
    <label>Lugar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>