force-app/main/default/objects/Colaboracion__c/fields/Primera_especialidad__c.field-meta.xml
<CustomField>
    <fullName>Primera_especialidad__c</fullName>
    <formula>TEXT(Profesional__r.Primera_especialidad__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1era especialidad</label>
    <type>Text</type>
</CustomField>