force-app/main/default/objects/Colaboracion__c/fields/Tipo_de_accion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_accion__c</fullName>
    <label>Tipo de acción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory Board</fullName>
            </value>
            <value>
                <fullName>Charla</fullName>
            </value>
            <value>
                <fullName>Participación en Congreso</fullName>
            </value>
            <value>
                <fullName>Confección de material cientifico</fullName>
            </value>
            <value>
                <fullName>Otra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>